--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
     "fastmcp==2.14.4",
-    "httpx==0.28.1"
+    "httpx==0.28.1",
+    "pyyaml==6.0.3"
 ]
 
 [project.scripts]
