--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,8 @@ services:
     envVars:
       - key: PORT
         value: "8000"
+      - key: GITHUB_PAT
+        sync: false  # we have to set this manually in the Render dashboard
       - key: PYTHON_VERSION
         # renovate: datasource=docker name=python
         value: "3.14.2"
