feat: use custom GITHUB_PAT in CI workflow for pytest execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,5 @@ jobs:
           python -m venv .poetry
           ./.poetry/bin/pip install poetry
           ./.poetry/bin/poetry install --all-extras
+          export GITHUB_PAT=${{ secrets.GH_READONLY_PAT_NO_SCOPES }}
           ./.poetry/bin/poetry run pytest
