--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     autoDeployTrigger: commit
     buildCommand: poetry install
-    startCommand: python src/package_version_check_mcp/main.py
+    startCommand: python src/package_version_check_mcp/main.py --mode=http
     healthCheckPath: /health
     envVars:
       - key: PORT
